# templum

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
app/: config.py
app/setups/: local.py
scripts/: publish.sh
temple/: cli.py
temple/templates/: CLAUDE.md
temple/templates/app/: auth.py  config.py  main.py
temple/templates/app/setups/: local.py
templum/: cli.py
templum/templates/: CLAUDE.md  Dockerfile  claude_api.md.j2  claude_cli.md.j2  claude_hybrid.md.j2
templum/templates/_docs/: api.md  cli.md  hybrid.md
templum/templates/_docs/shared/: code_style.md  done.md  testing.md  tooling.md
templum/templates/api/: CLAUDE.md
templum/templates/api/app/: deps.py
templum/templates/api/app/setups/: base.py
templum/templates/cli/: .gitignore
templum/templates/cli/app/: config.py  main.py
templum/templates/cli/app/commands/: root.py
templum/templates/hybrid/cli/: main.py
templum/templates/hybrid/cli/commands/: root.py
tests/: test_cli.py
