[project]
name = "temple"
version = "0.1.0"
description = "FastAPI project scaffold generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
]

[project.scripts]
temple = "temple.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ty>=0.0.24",
]

[tool.ty.src]
exclude = ["temple/templates"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
