[project]
name = "templum"
version = "0.1.3"
description = "Project scaffold generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "typer>=0.15.0",
]

[project.urls]
Repository = "https://github.com/nikirg/templum"

[project.scripts]
templum = "templum.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ty>=0.0.24",
]

[tool.ty.src]
exclude = ["templum/templates"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
